tests/script_errors/invalid_utf8_3/error.txt
Error: 
    1 | "\u0
      |  ^^^ An invalid UTF8 escape sequence was found